fix: Remove the odd white space at the bottom

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
     display: grid;
     grid-template: 0.4fr 2fr 0.1fr/ 0.4fr 2fr;
     gap: 10px;
+    height: 100vh;
+    max-width: 100vw;
+    overflow: auto;
+    box-sizing: border-box;
 }
 
 header {
@@ -239,6 +243,7 @@ footer {
 
     nav {
         max-width: 100%;
+        height: 150px;
         grid-row: 2 / 3;
         grid-column: 1 / 2;
         flex-direction: row;
