--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,6 @@ body {
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     box-sizing: border-box;
     margin: 0;
-    padding: 8px;
+    padding: 0 0 0 8px;
+    min-height: 100vh;
 }
